--- a/bigbluebutton-html5/private/config/settings.yml
+++ b/bigbluebutton-html5/private/config/settings.yml
@@ -701,6 +701,8 @@ public:
         - value: 20
         - value: 16
       tools:
+        - icon: eraser_tool
+          value: eraser
         - icon: text_tool
           value: text
         - icon: line_tool
@@ -716,6 +718,7 @@ public:
         - icon: hand
           value: hand
       presenterTools:
+        - eraser
         - text
         - line
         - ellipse
@@ -724,6 +727,7 @@ public:
         - pencil
         - hand
       multiUserTools:
+        - eraser
         - text
         - line
         - ellipse
