--- a/bigbluebutton-html5/private/config/settings.yml
+++ b/bigbluebutton-html5/private/config/settings.yml
@@ -205,7 +205,7 @@ public:
   externalVideoPlayer:
     enabled: true
   kurento:
-    wsUrl: HOST
+    wsUrl: wss://vh-sg-002.bbb-engine.com/bbb-webrtc-sfu
     # Valid for video-provider. Time (ms) before its WS connection times out
     # and tries to reconnect.
     wsConnectionTimeout: 4000
@@ -703,6 +703,8 @@ public:
       tools:
         - icon: eraser_tool
           value: eraser
+        - icon: marker_tool
+          value: marker
         - icon: text_tool
           value: text
         - icon: line_tool
@@ -718,6 +720,7 @@ public:
         - icon: hand
           value: hand
       presenterTools:
+        - marker
         - eraser
         - text
         - line
@@ -727,6 +730,7 @@ public:
         - pencil
         - hand
       multiUserTools:
+        - marker
         - eraser
         - text
         - line
