--- a/bbb-webhooks/config/default.example.yml
+++ b/bbb-webhooks/config/default.example.yml
@@ -17,9 +17,9 @@ hooks:
     - from-akka-apps-redis-channel
     - from-bbb-web-redis-channel
     - from-akka-apps-chat-redis-channel
+    - from-akka-apps-pres-redis-channel
     - bigbluebutton:from-bbb-apps:meeting
     - bigbluebutton:from-bbb-apps:users
-    - bigbluebutton:from-bbb-apps:chat
     - bigbluebutton:from-rap
   # IP where permanent hook will post data (more than 1 URL means more than 1 permanent hook)
   permanentURLs: []
