--- a/bigbluebutton-html5/private/config/settings.yml
+++ b/bigbluebutton-html5/private/config/settings.yml
@@ -205,7 +205,7 @@ public:
   externalVideoPlayer:
     enabled: true
   kurento:
-    wsUrl: wss://vh-sg-002.bbb-engine.com/bbb-webrtc-sfu
+    wsUrl: HOST
     # Valid for video-provider. Time (ms) before its WS connection times out
     # and tries to reconnect.
     wsConnectionTimeout: 4000
@@ -701,10 +701,6 @@ public:
         - value: 20
         - value: 16
       tools:
-        - icon: eraser_tool
-          value: eraser
-        - icon: marker_tool
-          value: marker
         - icon: text_tool
           value: text
         - icon: line_tool
@@ -720,8 +716,6 @@ public:
         - icon: hand
           value: hand
       presenterTools:
-        - marker
-        - eraser
         - text
         - line
         - ellipse
@@ -730,8 +724,6 @@ public:
         - pencil
         - hand
       multiUserTools:
-        - marker
-        - eraser
         - text
         - line
         - ellipse
