--- a/bigbluebutton-html5/private/config/settings.yml
+++ b/bigbluebutton-html5/private/config/settings.yml
@@ -206,7 +206,7 @@ public:
   externalVideoPlayer:
     enabled: true
   kurento:
-    wsUrl: HOST
+    wsUrl: wss://vh-sg-021.bbb-engine.com/bbb-webrtc-sfu
     # Valid for video-provider. Time (ms) before its WS connection times out
     # and tries to reconnect.
     wsConnectionTimeout: 4000
@@ -551,7 +551,7 @@ public:
     # Number of reconnection attempts of the signaling websocket, before
     # showing to the user there's an audio error.
     audioReconnectionAttempts: 3
-    sipjsHackViaWs: false
+    sipjsHackViaWs: true
     # the fqdn of this host.
     # If you run a traditional setup of multiple nodes behind scalelite and the users see the hostnames of the
     # individual nodes, you can leave this at the default setting
@@ -706,6 +706,10 @@ public:
         - value: 20
         - value: 16
       tools:
+        - icon: eraser_tool
+          value: eraser
+        - icon: marker_tool
+          value: marker
         - icon: text_tool
           value: text
         - icon: line_tool
@@ -721,6 +725,8 @@ public:
         - icon: hand
           value: hand
       presenterTools:
+        - marker
+        - eraser
         - text
         - line
         - ellipse
@@ -729,6 +735,8 @@ public:
         - pencil
         - hand
       multiUserTools:
+        - marker
+        - eraser
         - text
         - line
         - ellipse
